--- a/package.json
+++ b/package.json
@@ -22,10 +22,17 @@
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^4.1.0",
     "gulp-csso": "^3.0.1",
+    "gulp-cwebp": "^3.0.0",
     "gulp-imagemin": "^4.1.0",
+    "gulp-postcss": "^7.0.1",
     "gulp-rename": "^1.2.2",
+    "gulp-run-sequence": "^0.3.2",
     "gulp-sass": "^3.1.0",
+    "gulp-svg-sprites": "^4.1.2",
+    "gulp-svgo": "^1.3.1",
     "gulp-tinify": "^1.0.2",
-    "gulp-watch": "^5.0.0"
+    "gulp-wait": "0.0.2",
+    "gulp-watch": "^5.0.0",
+    "run-sequence": "^2.2.1"
   }
 }
